[tool.poetry]
name = "Verify IP"
version = "0.1.0"
description = "Checks the IP and send notification."
authors = ["J. Jefferson N. do Vale"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
Flask = "^2.1.2"
dynaconf = "^3.1.9"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
